# Drug-Target-Affinity

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
code/: best_model.py  data_prepare.py  data_process.py  dynamic_model.py  encoder_model.py  main.py  model.py  model_protBERT.py  optuna_main.py  optuna_main_encoder.py  optuna_protBERT.py  utils.py
code/data_processing/: data_prepare.py  data_process.py
code/main/: optuna_main.py  optuna_main_encoder.py  optuna_protBERT.py
code/models/: model_protBERT.py
data/affinity/Kd/: test.txt
datasets/affinity/Kd/: amino_dict  atom_dict
output/: optuna_trial_log.txt
output_dynamicGAT/: optuna_dynamicGAT_trial_log.txt
output_encoder_decoder/: optuna_encoder_decoder_trial_log.txt
